// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ui/monitoring/values/value > should not render when not visible 1`] = `null`;

exports[`ui/monitoring/values/value > should render a HTML value 1`] = `
<section
  className="msla-trace-value-label"
>
  <label
    className="msla-trace-value-display-name"
    id="msla-html0"
  >
    date/time
  </label>
  <div
    aria-labelledby="msla-html0"
    className="msla-trace-value-text msla-trace-value-html-table"
  >
    <table
      dangerouslySetInnerHTML={
        {
          "__html": "<table><tbody><tr><td>1</td></tr></tbody></table>",
        }
      }
      tabIndex={0}
    />
  </div>
</section>
`;

exports[`ui/monitoring/values/value > should render a body link value 1`] = `
<section
  className="msla-trace-value-label"
>
  <label
    className="msla-trace-value-display-name"
  >
    displayName
  </label>
  <div
    className="msla-trace-value-text"
  >
    <a
      aria-label="Alt/Option + select to download 'displayName'"
      className="ms-Link root-109"
      href="uri"
      onClick={[Function]}
      rel="noopener"
      target="_blank"
    >
      Download (Alt or Option + select)
    </a>
  </div>
</section>
`;

exports[`ui/monitoring/values/value > should render a decimal value 1`] = `
<section
  className="msla-trace-value-label"
>
  <label
    className="msla-trace-value-display-name"
  >
    display-name
  </label>
  <div
    className="msla-colorizer-json-body"
  >
    <div
      aria-label="display-name"
      aria-readonly="true"
      className="msla-colorizer-wrapper"
      role="textbox"
      tabIndex={0}
    >
      <div
        className="buttons"
      >
        <button
          aria-label="Select all text in 'display-name'"
          className="fui-Button r1alrhcs ___w3o4yv0_df8ghi0 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl f18ktai2 fwbmr0d f44c6la"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onPointerEnter={[Function]}
          onPointerLeave={[Function]}
          type="button"
        >
          <span
            className="fui-Button__icon rywnvv2"
          >
            <svg
              aria-hidden={true}
              className="fui-Icon-filled ___1vjqft9_1uxjcqz fjseox fez10in fg4l7m0"
              fill="currentColor"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4.5 3.5a1 1 0 0 0-1 1v2.25a.75.75 0 0 1-1.5 0V4.5A2.5 2.5 0 0 1 4.5 2h2.25a.75.75 0 0 1 0 1.5H4.5Zm0 13a1 1 0 0 1-1-1v-2.25a.75.75 0 0 0-1.5 0v2.25A2.5 2.5 0 0 0 4.5 18h2.25a.75.75 0 0 0 0-1.5H4.5Zm12-12a1 1 0 0 0-1-1h-2.25a.75.75 0 0 1 0-1.5h2.25A2.5 2.5 0 0 1 18 4.5v2.25a.75.75 0 0 1-1.5 0V4.5Zm-1 12a1 1 0 0 0 1-1v-2.25a.75.75 0 0 1 1.5 0v2.25a2.5 2.5 0 0 1-2.5 2.5h-2.25a.75.75 0 0 1 0-1.5h2.25ZM6 6.75c0-.41.34-.75.75-.75h6.5a.75.75 0 0 1 0 1.5h-6.5A.75.75 0 0 1 6 6.75ZM6.75 9a.75.75 0 0 0 0 1.5h6.5a.75.75 0 0 0 0-1.5h-6.5ZM6 12.75c0-.41.34-.75.75-.75h3.5a.75.75 0 0 1 0 1.5h-3.5a.75.75 0 0 1-.75-.75Z"
                fill="currentColor"
              />
            </svg>
            <svg
              aria-hidden={true}
              className="fui-Icon-regular ___12fm75w_1vnroxd f1w7gpdv fez10in fg4l7m0"
              fill="currentColor"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4.5 3C3.67 3 3 3.67 3 4.5v2a.5.5 0 0 1-1 0v-2A2.5 2.5 0 0 1 4.5 2h2a.5.5 0 0 1 0 1h-2Zm0 14A1.5 1.5 0 0 1 3 15.5v-2a.5.5 0 0 0-1 0v2A2.5 2.5 0 0 0 4.5 18h2a.5.5 0 0 0 0-1h-2ZM17 4.5c0-.83-.67-1.5-1.5-1.5h-2a.5.5 0 0 1 0-1h2A2.5 2.5 0 0 1 18 4.5v2a.5.5 0 0 1-1 0v-2ZM15.5 17c.83 0 1.5-.67 1.5-1.5v-2a.5.5 0 0 1 1 0v2a2.5 2.5 0 0 1-2.5 2.5h-2a.5.5 0 0 1 0-1h2Zm-9-11a.5.5 0 0 0 0 1h7a.5.5 0 0 0 0-1h-7Zm0 3a.5.5 0 0 0 0 1h7a.5.5 0 0 0 0-1h-7ZM6 12.5c0-.28.22-.5.5-.5h4a.5.5 0 0 1 0 1h-4a.5.5 0 0 1-.5-.5Z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
        <button
          aria-label="Copy the value of 'display-name' to the clipboard"
          className="fui-Button r1alrhcs ___w3o4yv0_df8ghi0 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl f18ktai2 fwbmr0d f44c6la"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onPointerEnter={[Function]}
          onPointerLeave={[Function]}
          type="button"
        >
          <span
            className="fui-Button__icon rywnvv2"
          >
            <svg
              aria-hidden={true}
              className="fui-Icon-filled ___1vjqft9_1uxjcqz fjseox fez10in fg4l7m0"
              fill="currentColor"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 4c0-1.1.9-2 2-2h6a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H8a2 2 0 0 1-2-2V4ZM4 6a2 2 0 0 1 1-1.73V14.5A2.5 2.5 0 0 0 7.5 17h6.23A2 2 0 0 1 12 18H7.5A3.5 3.5 0 0 1 4 14.5V6Z"
                fill="currentColor"
              />
            </svg>
            <svg
              aria-hidden={true}
              className="fui-Icon-regular ___12fm75w_1vnroxd f1w7gpdv fez10in fg4l7m0"
              fill="currentColor"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 2a2 2 0 0 0-2 2v10c0 1.1.9 2 2 2h6a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H8ZM7 4a1 1 0 0 1 1-1h6a1 1 0 0 1 1 1v10a1 1 0 0 1-1 1H8a1 1 0 0 1-1-1V4ZM4 6a2 2 0 0 1 1-1.73V14.5A2.5 2.5 0 0 0 7.5 17h6.23A2 2 0 0 1 12 18H7.5A3.5 3.5 0 0 1 4 14.5V6Z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
      </div>
      <pre
        className="prism-code language-json"
        style={
          {
            "backgroundColor": "#ffffff",
            "color": "#000000",
          }
        }
      >
        <div
          className="token-line"
          style={
            {
              "backgroundColor": undefined,
              "color": "#000000",
            }
          }
        >
          <span
            className="token plain"
          >
            -123.45
          </span>
        </div>
      </pre>
    </div>
  </div>
</section>
`;

exports[`ui/monitoring/values/value > should render a key-value pairs details list 1`] = `
<section
  className="msla-trace-value-label"
>
  <label
    className="msla-trace-value-display-name"
  >
    Headers
  </label>
  <div
    className="msla-trace-value-text msla-trace-value-key-value-pairs"
  >
    <div
      className="ms-Viewport"
      style={
        {
          "minHeight": 1,
          "minWidth": 1,
        }
      }
    >
      <div
        className="ms-DetailsList is-fixed ms-DetailsList--Compact is-horizontalConstrained root-110"
        data-automationid="DetailsList"
        data-is-scrollable="false"
      >
        <div
          aria-colcount={2}
          aria-label="Headers"
          aria-rowcount={4}
          role="grid"
        >
          <div
            className="ms-DetailsList-headerWrapper"
            onKeyDown={[Function]}
            role="presentation"
          >
            <div
              aria-label="Headers"
              className="ms-FocusZone css-128 ms-DetailsHeader root-112"
              data-automationid="DetailsHeader"
              data-focuszone-id="FocusZone3"
              data-tabster="{"uncontrolled": {}}"
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseDownCapture={[Function]}
              onMouseMove={[Function]}
              role="row"
            >
              <div
                aria-label="Key"
                aria-sort="none"
                className="ms-DetailsHeader-cell is-actionable root-129"
                data-automationid="ColumnsHeaderColumn"
                data-is-draggable={false}
                data-is-focusable="true"
                data-item-key="$key"
                draggable={false}
                role="columnheader"
                style={
                  {
                    "width": NaN,
                  }
                }
              >
                <span
                  className="cellTooltip-137"
                >
                  <span
                    className="ms-DetailsHeader-cellTitle cellTitle-135"
                    id="header2-$key"
                    onClick={[Function]}
                    onContextMenu={[Function]}
                  >
                    <span
                      className="ms-DetailsHeader-cellName cellName-136"
                      id="header2-$key-name"
                    >
                      Key
                    </span>
                  </span>
                </span>
              </div>
              <div
                aria-hidden={true}
                className="ms-DetailsHeader-cellSizer cellSizer-119 cellSizerStart-120"
                data-is-focusable={false}
                data-sizer-index={0}
                onBlur={[Function]}
                onClick={[Function]}
                onDoubleClick={[Function]}
                role="button"
              />
              <div
                aria-label="Value"
                aria-sort="none"
                className="ms-DetailsHeader-cell is-actionable root-129"
                data-automationid="ColumnsHeaderColumn"
                data-is-draggable={false}
                data-is-focusable="true"
                data-item-key="$value"
                draggable={false}
                role="columnheader"
                style={
                  {
                    "width": NaN,
                  }
                }
              >
                <span
                  className="cellTooltip-137"
                >
                  <span
                    className="ms-DetailsHeader-cellTitle cellTitle-135"
                    id="header2-$value"
                    onClick={[Function]}
                    onContextMenu={[Function]}
                  >
                    <span
                      className="ms-DetailsHeader-cellName cellName-136"
                      id="header2-$value-name"
                    >
                      Value
                    </span>
                  </span>
                </span>
              </div>
              <div
                aria-hidden={true}
                className="ms-DetailsHeader-cellSizer cellSizer-119 cellSizerEnd-121"
                data-is-focusable={false}
                data-sizer-index={1}
                onBlur={[Function]}
                onClick={[Function]}
                onDoubleClick={[Function]}
                role="button"
              />
            </div>
          </div>
          <div
            className="ms-DetailsList-contentWrapper"
            onKeyDown={[Function]}
            role="presentation"
          >
            <div
              className="ms-SelectionZone"
              onClick={[Function]}
              onContextMenu={[Function]}
              onDoubleClick={[Function]}
              onFocusCapture={[Function]}
              onKeyDown={[Function]}
              onKeyDownCapture={[Function]}
              onMouseDown={[Function]}
              onMouseDownCapture={[Function]}
              role="presentation"
            >
              <div
                className="ms-FocusZone css-128 focusZone-111"
                data-focuszone-id="FocusZone4"
                data-tabster="{"uncontrolled": {}}"
                onBlur={[Function]}
                onFocus={[Function]}
                onKeyDown={[Function]}
                onMouseDownCapture={[Function]}
              >
                <div
                  className="ms-List"
                  role="presentation"
                >
                  <div
                    className="ms-List-surface"
                    role="presentation"
                  >
                    <div
                      className="ms-List-page"
                      role="presentation"
                      style={{}}
                    >
                      <div
                        className="ms-List-cell"
                        data-automationid="ListCell"
                        data-list-index={0}
                        role="presentation"
                      >
                        <div
                          aria-rowindex={2}
                          className="ms-FocusZone css-128 ms-DetailsRow root-143"
                          data-automationid="DetailsRow"
                          data-focuszone-id="FocusZone6"
                          data-is-focusable={true}
                          data-item-index={0}
                          data-selection-index={0}
                          data-selection-touch-invoke={true}
                          data-tabster="{"uncontrolled": {}}"
                          id="row1-0"
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          onMouseDownCapture={[Function]}
                          role="row"
                        >
                          <div
                            className="ms-DetailsRow-fields fields-149"
                            data-automationid="DetailsRowFields"
                            role="presentation"
                          >
                            <div
                              className="ms-DetailsRow-cell isMultiline-151 ms-DetailsRow-cell cell-146 cellUnpadded-144"
                              data-automation-key="$key"
                              data-automationid="DetailsRowCell"
                              role="gridcell"
                              style={
                                {
                                  "width": "auto",
                                }
                              }
                            >
                              Access-Control-Allow-Credentials
                            </div>
                            <div
                              className="ms-DetailsRow-cell isMultiline-151 ms-DetailsRow-cell cell-146 cellUnpadded-144"
                              data-automation-key="$value"
                              data-automationid="DetailsRowCell"
                              role="gridcell"
                              style={
                                {
                                  "width": "auto",
                                }
                              }
                            >
                              true
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        className="ms-List-cell"
                        data-automationid="ListCell"
                        data-list-index={1}
                        role="presentation"
                      >
                        <div
                          aria-rowindex={3}
                          className="ms-FocusZone css-128 ms-DetailsRow root-143"
                          data-automationid="DetailsRow"
                          data-focuszone-id="FocusZone8"
                          data-is-focusable={true}
                          data-item-index={1}
                          data-selection-index={1}
                          data-selection-touch-invoke={true}
                          data-tabster="{"uncontrolled": {}}"
                          id="row1-1"
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          onMouseDownCapture={[Function]}
                          role="row"
                        >
                          <div
                            className="ms-DetailsRow-fields fields-149"
                            data-automationid="DetailsRowFields"
                            role="presentation"
                          >
                            <div
                              className="ms-DetailsRow-cell isMultiline-151 ms-DetailsRow-cell cell-146 cellUnpadded-144"
                              data-automation-key="$key"
                              data-automationid="DetailsRowCell"
                              role="gridcell"
                              style={
                                {
                                  "width": "auto",
                                }
                              }
                            >
                              Access-Control-Allow-Origin
                            </div>
                            <div
                              className="ms-DetailsRow-cell isMultiline-151 ms-DetailsRow-cell cell-146 cellUnpadded-144"
                              data-automation-key="$value"
                              data-automationid="DetailsRowCell"
                              role="gridcell"
                              style={
                                {
                                  "width": "auto",
                                }
                              }
                            >
                              *
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        className="ms-List-cell"
                        data-automationid="ListCell"
                        data-list-index={2}
                        role="presentation"
                      >
                        <div
                          aria-rowindex={4}
                          className="ms-FocusZone css-128 ms-DetailsRow root-143"
                          data-automationid="DetailsRow"
                          data-focuszone-id="FocusZone10"
                          data-is-focusable={true}
                          data-item-index={2}
                          data-selection-index={2}
                          data-selection-touch-invoke={true}
                          data-tabster="{"uncontrolled": {}}"
                          id="row1-2"
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          onMouseDownCapture={[Function]}
                          role="row"
                        >
                          <div
                            className="ms-DetailsRow-fields fields-149"
                            data-automationid="DetailsRowFields"
                            role="presentation"
                          >
                            <div
                              className="ms-DetailsRow-cell isMultiline-151 ms-DetailsRow-cell cell-146 cellUnpadded-144"
                              data-automation-key="$key"
                              data-automationid="DetailsRowCell"
                              role="gridcell"
                              style={
                                {
                                  "width": "auto",
                                }
                              }
                            >
                              Referrer-Policy
                            </div>
                            <div
                              className="ms-DetailsRow-cell isMultiline-151 ms-DetailsRow-cell cell-146 cellUnpadded-144"
                              data-automation-key="$value"
                              data-automationid="DetailsRowCell"
                              role="gridcell"
                              style={
                                {
                                  "width": "auto",
                                }
                              }
                            >
                              no-referred-when-downgrade
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`ui/monitoring/values/value > should render a number value 1`] = `
<section
  className="msla-trace-value-label"
>
  <label
    className="msla-trace-value-display-name"
  >
    display-name
  </label>
  <div
    className="msla-colorizer-json-body"
  >
    <div
      aria-label="display-name"
      aria-readonly="true"
      className="msla-colorizer-wrapper"
      role="textbox"
      tabIndex={0}
    >
      <div
        className="buttons"
      >
        <button
          aria-label="Select all text in 'display-name'"
          className="fui-Button r1alrhcs ___w3o4yv0_df8ghi0 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl f18ktai2 fwbmr0d f44c6la"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onPointerEnter={[Function]}
          onPointerLeave={[Function]}
          type="button"
        >
          <span
            className="fui-Button__icon rywnvv2"
          >
            <svg
              aria-hidden={true}
              className="fui-Icon-filled ___1vjqft9_1uxjcqz fjseox fez10in fg4l7m0"
              fill="currentColor"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4.5 3.5a1 1 0 0 0-1 1v2.25a.75.75 0 0 1-1.5 0V4.5A2.5 2.5 0 0 1 4.5 2h2.25a.75.75 0 0 1 0 1.5H4.5Zm0 13a1 1 0 0 1-1-1v-2.25a.75.75 0 0 0-1.5 0v2.25A2.5 2.5 0 0 0 4.5 18h2.25a.75.75 0 0 0 0-1.5H4.5Zm12-12a1 1 0 0 0-1-1h-2.25a.75.75 0 0 1 0-1.5h2.25A2.5 2.5 0 0 1 18 4.5v2.25a.75.75 0 0 1-1.5 0V4.5Zm-1 12a1 1 0 0 0 1-1v-2.25a.75.75 0 0 1 1.5 0v2.25a2.5 2.5 0 0 1-2.5 2.5h-2.25a.75.75 0 0 1 0-1.5h2.25ZM6 6.75c0-.41.34-.75.75-.75h6.5a.75.75 0 0 1 0 1.5h-6.5A.75.75 0 0 1 6 6.75ZM6.75 9a.75.75 0 0 0 0 1.5h6.5a.75.75 0 0 0 0-1.5h-6.5ZM6 12.75c0-.41.34-.75.75-.75h3.5a.75.75 0 0 1 0 1.5h-3.5a.75.75 0 0 1-.75-.75Z"
                fill="currentColor"
              />
            </svg>
            <svg
              aria-hidden={true}
              className="fui-Icon-regular ___12fm75w_1vnroxd f1w7gpdv fez10in fg4l7m0"
              fill="currentColor"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4.5 3C3.67 3 3 3.67 3 4.5v2a.5.5 0 0 1-1 0v-2A2.5 2.5 0 0 1 4.5 2h2a.5.5 0 0 1 0 1h-2Zm0 14A1.5 1.5 0 0 1 3 15.5v-2a.5.5 0 0 0-1 0v2A2.5 2.5 0 0 0 4.5 18h2a.5.5 0 0 0 0-1h-2ZM17 4.5c0-.83-.67-1.5-1.5-1.5h-2a.5.5 0 0 1 0-1h2A2.5 2.5 0 0 1 18 4.5v2a.5.5 0 0 1-1 0v-2ZM15.5 17c.83 0 1.5-.67 1.5-1.5v-2a.5.5 0 0 1 1 0v2a2.5 2.5 0 0 1-2.5 2.5h-2a.5.5 0 0 1 0-1h2Zm-9-11a.5.5 0 0 0 0 1h7a.5.5 0 0 0 0-1h-7Zm0 3a.5.5 0 0 0 0 1h7a.5.5 0 0 0 0-1h-7ZM6 12.5c0-.28.22-.5.5-.5h4a.5.5 0 0 1 0 1h-4a.5.5 0 0 1-.5-.5Z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
        <button
          aria-label="Copy the value of 'display-name' to the clipboard"
          className="fui-Button r1alrhcs ___w3o4yv0_df8ghi0 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl f18ktai2 fwbmr0d f44c6la"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onPointerEnter={[Function]}
          onPointerLeave={[Function]}
          type="button"
        >
          <span
            className="fui-Button__icon rywnvv2"
          >
            <svg
              aria-hidden={true}
              className="fui-Icon-filled ___1vjqft9_1uxjcqz fjseox fez10in fg4l7m0"
              fill="currentColor"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 4c0-1.1.9-2 2-2h6a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H8a2 2 0 0 1-2-2V4ZM4 6a2 2 0 0 1 1-1.73V14.5A2.5 2.5 0 0 0 7.5 17h6.23A2 2 0 0 1 12 18H7.5A3.5 3.5 0 0 1 4 14.5V6Z"
                fill="currentColor"
              />
            </svg>
            <svg
              aria-hidden={true}
              className="fui-Icon-regular ___12fm75w_1vnroxd f1w7gpdv fez10in fg4l7m0"
              fill="currentColor"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 2a2 2 0 0 0-2 2v10c0 1.1.9 2 2 2h6a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H8ZM7 4a1 1 0 0 1 1-1h6a1 1 0 0 1 1 1v10a1 1 0 0 1-1 1H8a1 1 0 0 1-1-1V4ZM4 6a2 2 0 0 1 1-1.73V14.5A2.5 2.5 0 0 0 7.5 17h6.23A2 2 0 0 1 12 18H7.5A3.5 3.5 0 0 1 4 14.5V6Z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
      </div>
      <pre
        className="prism-code language-json"
        style={
          {
            "backgroundColor": "#ffffff",
            "color": "#000000",
          }
        }
      >
        <div
          className="token-line"
          style={
            {
              "backgroundColor": undefined,
              "color": "#000000",
            }
          }
        >
          <span
            className="token plain"
          >
            -123.45
          </span>
        </div>
      </pre>
    </div>
  </div>
</section>
`;

exports[`ui/monitoring/values/value > should render a raw value 1`] = `
<section
  className="msla-trace-value-label"
>
  <label
    className="msla-trace-value-display-name"
  >
    raw
  </label>
  <div
    className="msla-colorizer-json-body"
  >
    <div
      aria-label="raw"
      aria-readonly="true"
      className="msla-colorizer-wrapper"
      role="textbox"
      tabIndex={0}
    >
      <div
        className="buttons"
      >
        <button
          aria-label="Select all text in 'raw'"
          className="fui-Button r1alrhcs ___w3o4yv0_df8ghi0 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl f18ktai2 fwbmr0d f44c6la"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onPointerEnter={[Function]}
          onPointerLeave={[Function]}
          type="button"
        >
          <span
            className="fui-Button__icon rywnvv2"
          >
            <svg
              aria-hidden={true}
              className="fui-Icon-filled ___1vjqft9_1uxjcqz fjseox fez10in fg4l7m0"
              fill="currentColor"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4.5 3.5a1 1 0 0 0-1 1v2.25a.75.75 0 0 1-1.5 0V4.5A2.5 2.5 0 0 1 4.5 2h2.25a.75.75 0 0 1 0 1.5H4.5Zm0 13a1 1 0 0 1-1-1v-2.25a.75.75 0 0 0-1.5 0v2.25A2.5 2.5 0 0 0 4.5 18h2.25a.75.75 0 0 0 0-1.5H4.5Zm12-12a1 1 0 0 0-1-1h-2.25a.75.75 0 0 1 0-1.5h2.25A2.5 2.5 0 0 1 18 4.5v2.25a.75.75 0 0 1-1.5 0V4.5Zm-1 12a1 1 0 0 0 1-1v-2.25a.75.75 0 0 1 1.5 0v2.25a2.5 2.5 0 0 1-2.5 2.5h-2.25a.75.75 0 0 1 0-1.5h2.25ZM6 6.75c0-.41.34-.75.75-.75h6.5a.75.75 0 0 1 0 1.5h-6.5A.75.75 0 0 1 6 6.75ZM6.75 9a.75.75 0 0 0 0 1.5h6.5a.75.75 0 0 0 0-1.5h-6.5ZM6 12.75c0-.41.34-.75.75-.75h3.5a.75.75 0 0 1 0 1.5h-3.5a.75.75 0 0 1-.75-.75Z"
                fill="currentColor"
              />
            </svg>
            <svg
              aria-hidden={true}
              className="fui-Icon-regular ___12fm75w_1vnroxd f1w7gpdv fez10in fg4l7m0"
              fill="currentColor"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4.5 3C3.67 3 3 3.67 3 4.5v2a.5.5 0 0 1-1 0v-2A2.5 2.5 0 0 1 4.5 2h2a.5.5 0 0 1 0 1h-2Zm0 14A1.5 1.5 0 0 1 3 15.5v-2a.5.5 0 0 0-1 0v2A2.5 2.5 0 0 0 4.5 18h2a.5.5 0 0 0 0-1h-2ZM17 4.5c0-.83-.67-1.5-1.5-1.5h-2a.5.5 0 0 1 0-1h2A2.5 2.5 0 0 1 18 4.5v2a.5.5 0 0 1-1 0v-2ZM15.5 17c.83 0 1.5-.67 1.5-1.5v-2a.5.5 0 0 1 1 0v2a2.5 2.5 0 0 1-2.5 2.5h-2a.5.5 0 0 1 0-1h2Zm-9-11a.5.5 0 0 0 0 1h7a.5.5 0 0 0 0-1h-7Zm0 3a.5.5 0 0 0 0 1h7a.5.5 0 0 0 0-1h-7ZM6 12.5c0-.28.22-.5.5-.5h4a.5.5 0 0 1 0 1h-4a.5.5 0 0 1-.5-.5Z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
        <button
          aria-label="Copy the value of 'raw' to the clipboard"
          className="fui-Button r1alrhcs ___w3o4yv0_df8ghi0 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl f18ktai2 fwbmr0d f44c6la"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onPointerEnter={[Function]}
          onPointerLeave={[Function]}
          type="button"
        >
          <span
            className="fui-Button__icon rywnvv2"
          >
            <svg
              aria-hidden={true}
              className="fui-Icon-filled ___1vjqft9_1uxjcqz fjseox fez10in fg4l7m0"
              fill="currentColor"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 4c0-1.1.9-2 2-2h6a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H8a2 2 0 0 1-2-2V4ZM4 6a2 2 0 0 1 1-1.73V14.5A2.5 2.5 0 0 0 7.5 17h6.23A2 2 0 0 1 12 18H7.5A3.5 3.5 0 0 1 4 14.5V6Z"
                fill="currentColor"
              />
            </svg>
            <svg
              aria-hidden={true}
              className="fui-Icon-regular ___12fm75w_1vnroxd f1w7gpdv fez10in fg4l7m0"
              fill="currentColor"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 2a2 2 0 0 0-2 2v10c0 1.1.9 2 2 2h6a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H8ZM7 4a1 1 0 0 1 1-1h6a1 1 0 0 1 1 1v10a1 1 0 0 1-1 1H8a1 1 0 0 1-1-1V4ZM4 6a2 2 0 0 1 1-1.73V14.5A2.5 2.5 0 0 0 7.5 17h6.23A2 2 0 0 1 12 18H7.5A3.5 3.5 0 0 1 4 14.5V6Z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
      </div>
      <pre
        className="prism-code language-json"
        style={
          {
            "backgroundColor": "#ffffff",
            "color": "#000000",
          }
        }
      >
        <div
          className="token-line"
          style={
            {
              "backgroundColor": undefined,
              "color": "#000000",
            }
          }
        >
          <span
            className="token plain"
          >
            Hello World
          </span>
        </div>
      </pre>
    </div>
  </div>
</section>
`;

exports[`ui/monitoring/values/value > should render an XML value 1`] = `
<section
  className="msla-trace-value-label"
>
  <label
    className="msla-trace-value-display-name"
  >
    XML
  </label>
  <div
    className="msla-colorizer-json-body"
  >
    <div
      aria-label="XML"
      aria-readonly="true"
      className="msla-colorizer-wrapper"
      role="textbox"
      tabIndex={0}
    >
      <div
        className="buttons"
      >
        <button
          aria-label="Select all text in 'XML'"
          className="fui-Button r1alrhcs ___w3o4yv0_df8ghi0 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl f18ktai2 fwbmr0d f44c6la"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onPointerEnter={[Function]}
          onPointerLeave={[Function]}
          type="button"
        >
          <span
            className="fui-Button__icon rywnvv2"
          >
            <svg
              aria-hidden={true}
              className="fui-Icon-filled ___1vjqft9_1uxjcqz fjseox fez10in fg4l7m0"
              fill="currentColor"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4.5 3.5a1 1 0 0 0-1 1v2.25a.75.75 0 0 1-1.5 0V4.5A2.5 2.5 0 0 1 4.5 2h2.25a.75.75 0 0 1 0 1.5H4.5Zm0 13a1 1 0 0 1-1-1v-2.25a.75.75 0 0 0-1.5 0v2.25A2.5 2.5 0 0 0 4.5 18h2.25a.75.75 0 0 0 0-1.5H4.5Zm12-12a1 1 0 0 0-1-1h-2.25a.75.75 0 0 1 0-1.5h2.25A2.5 2.5 0 0 1 18 4.5v2.25a.75.75 0 0 1-1.5 0V4.5Zm-1 12a1 1 0 0 0 1-1v-2.25a.75.75 0 0 1 1.5 0v2.25a2.5 2.5 0 0 1-2.5 2.5h-2.25a.75.75 0 0 1 0-1.5h2.25ZM6 6.75c0-.41.34-.75.75-.75h6.5a.75.75 0 0 1 0 1.5h-6.5A.75.75 0 0 1 6 6.75ZM6.75 9a.75.75 0 0 0 0 1.5h6.5a.75.75 0 0 0 0-1.5h-6.5ZM6 12.75c0-.41.34-.75.75-.75h3.5a.75.75 0 0 1 0 1.5h-3.5a.75.75 0 0 1-.75-.75Z"
                fill="currentColor"
              />
            </svg>
            <svg
              aria-hidden={true}
              className="fui-Icon-regular ___12fm75w_1vnroxd f1w7gpdv fez10in fg4l7m0"
              fill="currentColor"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4.5 3C3.67 3 3 3.67 3 4.5v2a.5.5 0 0 1-1 0v-2A2.5 2.5 0 0 1 4.5 2h2a.5.5 0 0 1 0 1h-2Zm0 14A1.5 1.5 0 0 1 3 15.5v-2a.5.5 0 0 0-1 0v2A2.5 2.5 0 0 0 4.5 18h2a.5.5 0 0 0 0-1h-2ZM17 4.5c0-.83-.67-1.5-1.5-1.5h-2a.5.5 0 0 1 0-1h2A2.5 2.5 0 0 1 18 4.5v2a.5.5 0 0 1-1 0v-2ZM15.5 17c.83 0 1.5-.67 1.5-1.5v-2a.5.5 0 0 1 1 0v2a2.5 2.5 0 0 1-2.5 2.5h-2a.5.5 0 0 1 0-1h2Zm-9-11a.5.5 0 0 0 0 1h7a.5.5 0 0 0 0-1h-7Zm0 3a.5.5 0 0 0 0 1h7a.5.5 0 0 0 0-1h-7ZM6 12.5c0-.28.22-.5.5-.5h4a.5.5 0 0 1 0 1h-4a.5.5 0 0 1-.5-.5Z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
        <button
          aria-label="Copy the value of 'XML' to the clipboard"
          className="fui-Button r1alrhcs ___w3o4yv0_df8ghi0 fhovq9v f1p3nwhy f11589ue f1q5o8ev f1pdflbu fkfq4zb f1t94bn6 f1s2uweq fr80ssc f1ukrpxl fecsdlb fnwyq0v ft1hn21 fuxngvv fy5bs14 fsv2rcd f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1omzyqd f1dfjoow f1j98vj9 fj8yq94 f4xjyn1 f1et0tmh f9ddjv3 f1wi8ngl f18ktai2 fwbmr0d f44c6la"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onPointerEnter={[Function]}
          onPointerLeave={[Function]}
          type="button"
        >
          <span
            className="fui-Button__icon rywnvv2"
          >
            <svg
              aria-hidden={true}
              className="fui-Icon-filled ___1vjqft9_1uxjcqz fjseox fez10in fg4l7m0"
              fill="currentColor"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 4c0-1.1.9-2 2-2h6a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H8a2 2 0 0 1-2-2V4ZM4 6a2 2 0 0 1 1-1.73V14.5A2.5 2.5 0 0 0 7.5 17h6.23A2 2 0 0 1 12 18H7.5A3.5 3.5 0 0 1 4 14.5V6Z"
                fill="currentColor"
              />
            </svg>
            <svg
              aria-hidden={true}
              className="fui-Icon-regular ___12fm75w_1vnroxd f1w7gpdv fez10in fg4l7m0"
              fill="currentColor"
              height="1em"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 2a2 2 0 0 0-2 2v10c0 1.1.9 2 2 2h6a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H8ZM7 4a1 1 0 0 1 1-1h6a1 1 0 0 1 1 1v10a1 1 0 0 1-1 1H8a1 1 0 0 1-1-1V4ZM4 6a2 2 0 0 1 1-1.73V14.5A2.5 2.5 0 0 0 7.5 17h6.23A2 2 0 0 1 12 18H7.5A3.5 3.5 0 0 1 4 14.5V6Z"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
      </div>
      <pre
        className="prism-code language-json"
        style={
          {
            "backgroundColor": "#ffffff",
            "color": "#000000",
          }
        }
      >
        <div
          className="token-line"
          style={
            {
              "backgroundColor": undefined,
              "color": "#000000",
            }
          }
        >
          <span
            className="token plain"
          >
            &lt;xml&gt;&lt;/xml&gt;
          </span>
        </div>
      </pre>
    </div>
  </div>
</section>
`;
